<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".Fragment.CreateKhataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/iv_back_btn_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/create_khata"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/black_10"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="20dp"
                            android:background="@color/white"
                            android:backgroundTint="@color/white"
                            app:cardCornerRadius="40dp">

                            <ImageView
                                android:id="@+id/iv_khata_user_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:src="@drawable/iv_upside_green_arrow" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="#"
                                    android:textColor="@color/black"
                                    android:textSize="16dp" />

                                <TextView
                                    android:id="@+id/txt_khata_serial_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="2"
                                    android:textColor="@color/black"
                                    android:textSize="16dp" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/et_khata_user_name"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginHorizontal="10dp"
                                android:background="@drawable/background_language_boundary"
                                android:hint="@string/write_name_of_khata"
                                android:paddingHorizontal="5dp"
                                android:paddingLeft="5dp"
                                android:textSize="14dp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/phone_number"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <EditText
                            android:id="@+id/et_khata_user_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginHorizontal="10dp"
                            android:background="@drawable/background_language_boundary"
                            android:hint="@string/mention_phone"
                            android:inputType="number"
                            android:paddingLeft="10dp"
                            android:textSize="14dp" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_create_khata"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="end"
                            android:layout_marginVertical="30dp"
                            android:background="@color/increasing_green"
                            android:backgroundTint="@color/increasing_green"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="40dp"
                                android:text="@string/create_khata"
                                android:textColor="@color/black"
                                android:textSize="16dp" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="end|center"
                                android:layout_marginHorizontal="10dp"
                                android:src="@drawable/iv_back_btn_black" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_recents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txt_recents"
                            style="@style/textHeading"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/khata_book"
                            android:textColor="?colorSecondary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_delete_khata"
                            style="@style/textSubscript"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginRight="10dp"
                            android:onClick="onClick"
                            android:text="@string/view_all"
                            android:textColor="?colorSecondary" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_all_khata"
                        android:layout_width="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>